--- a/TeamProjectConfig/TeamProject.config
+++ b/TeamProjectConfig/TeamProject.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <TeamConfig xmlns="http://microsoft.com/schemas/VisualStudio/TFS/2008/TeamConfig.xsd">
-  <TeamMembersGroup groupname="[User Services]\Contributors" />
+  <TeamMembersGroup groupname="[User Services]\Project Administrators" />
   <WorkspaceTempates />
 </TeamConfig>
