--- a/Main/Source/BBC.Dna/BBC.DNA.csproj
+++ b/Main/Source/BBC.Dna/BBC.DNA.csproj
@@ -403,9 +403,9 @@
   -->
   <PropertyGroup>
     <PostBuildEvent>
-	if not exist "$(ProjectDir)..\Web Services\dnapages\bin" mkdir "$(ProjectDir)..\Web Services\dnapages\bin"
-	xcopy "$(TargetDir)*.dll" "$(ProjectDir)..\Web Services\dnapages\bin" /D /Y
-	xcopy "$(TargetDir)*.pdb" "$(ProjectDir)..\Web Services\dnapages\bin" /D /Y
+	if not exist "$(ProjectDir)..\Web Services\dna\dnapages\bin" mkdir "$(ProjectDir)..\Web Services\dna\dnapages\bin"
+	xcopy "$(TargetDir)*.dll" "$(ProjectDir)..\Web Services\dna\dnapages\bin" /D /Y
+	xcopy "$(TargetDir)*.pdb" "$(ProjectDir)..\Web Services\dna\dnapages\bin" /D /Y
 
 
 </PostBuildEvent>
