--- a/Main/Source/Shared/BBC.Dna.Users/BBC.Dna.Users.csproj
+++ b/Main/Source/Shared/BBC.Dna.Users/BBC.Dna.Users.csproj
@@ -66,7 +66,7 @@
   <ItemGroup>
     <Reference Include="DnaIdentityWebServiceProxy, Version=1.0.1.5, Culture=neutral, PublicKeyToken=8e1f4c7d0de58a62, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\ReferenceDlls\DnaIdentityWebServiceProxy.dll</HintPath>
+      <HintPath>..\..\Reference DLLs\DnaIdentityWebServiceProxy.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.Caching, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
