--- a/Main/Source/Shared/BBC.Dna.Utils/BBC.Dna.Utils.csproj
+++ b/Main/Source/Shared/BBC.Dna.Utils/BBC.Dna.Utils.csproj
@@ -74,9 +74,13 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Reference DLLs\EnterpriseLibrary\Microsoft.Practices.EnterpriseLibrary.Logging.dll</HintPath>
     </Reference>
+    <Reference Include="saxon9, Version=9.1.0.5, Culture=neutral, PublicKeyToken=e1fdd002d5083fe6">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Reference DLLs\saxon\saxon9.dll</HintPath>
+    </Reference>
     <Reference Include="saxon9api, Version=9.1.0.5, Culture=neutral, PublicKeyToken=e1fdd002d5083fe6, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\BBC.DNA\ReferenceDlls\saxon\saxon9api.dll</HintPath>
+      <HintPath>..\..\Reference DLLs\saxon\saxon9api.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
