--- a/Main/Tests/Legacy Tests/FunctionalTests/FunctionalTests.csproj
+++ b/Main/Tests/Legacy Tests/FunctionalTests/FunctionalTests.csproj
@@ -283,7 +283,6 @@
     <Compile Include="UserSynchronisationTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <Content Include="Memcached.ClientLibrary\biggerthan1megfile.txt" />
     <Content Include="Memcached.ClientLibrary\compressablefile.txt" />
   </ItemGroup>
@@ -318,6 +317,9 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Dna.Services\commentsForumTests\createCommentThreadTests\" />
