--- a/Main/Web.config
+++ b/Main/Web.config
@@ -24,69 +24,48 @@
       </sectionGroup>
     </sectionGroup>
   </configSections>
-  <loggingConfiguration name="Logging Application Block" tracingEnabled="true" defaultCategory="" logWarningsWhenNoCategoriesMatch="true">
-    <listeners>
-      <add fileName="logs/Errors_rolling.log" footer="----------------------------------------" formatter="Text Formatter" header="----------------------------------------" rollFileExistsBehavior="Increment" rollInterval="Hour" rollSizeKB="0" timeStampPattern="yyyy-MM-dd" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d" traceOutputOptions="None" filter="Error" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d" name="RollingErrors" />
-      <add fileName="logs/information_rolling.log" footer="----------------------------------------" formatter="Text Formatter" header="----------------------------------------" rollFileExistsBehavior="Increment" rollInterval="Hour" rollSizeKB="0" timeStampPattern="yyyy-MM-dd" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d" traceOutputOptions="None" filter="All" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d" name="RollingInformation" />
-    </listeners>
-    <formatters>
-      <add template="Timestamp: {timestamp}&#xD;&#xA;Message: {message}&#xD;&#xA;Category: {category}&#xD;&#xA;Priority: {priority}&#xD;&#xA;EventId: {eventid}&#xD;&#xA;Severity: {severity}&#xD;&#xA;Title:{title}&#xD;&#xA;Machine: {machine}&#xD;&#xA;Application Domain: {appDomain}&#xD;&#xA;Process Id: {processId}&#xD;&#xA;Process Name: {processName}&#xD;&#xA;Win32 Thread Id: {win32ThreadId}&#xD;&#xA;Thread Name: {threadName}&#xD;&#xA;Extended Properties: {dictionary({key} - {value}&#xD;&#xA;)}" type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d" name="Text Formatter" />
-    </formatters>
-    <categorySources>
-      <add switchValue="All" name="BBC.Dna.Data">
-        <listeners>
-          <add name="RollingInformation" />
-        </listeners>
-      </add>
-      <add switchValue="All" name="BBC.Dna.Sites">
-        <listeners>
-          <add name="RollingInformation" />
-        </listeners>
-      </add>
-      <add switchValue="All" name="System.ServiceModel">
-        <listeners>
-          <add name="RollingInformation" />
-        </listeners>
-      </add>
-    </categorySources>
-    <specialSources>
-      <allEvents switchValue="All" name="All Events">
-        <listeners>
-          <add name="RollingInformation" />
-        </listeners>
-      </allEvents>
-      <notProcessed switchValue="All" name="Unprocessed Category">
-        <listeners>
-          <add name="RollingInformation" />
-        </listeners>
-      </notProcessed>
-      <errors switchValue="All" name="Logging Errors &amp; Warnings">
-        <listeners>
-          <add name="RollingErrors" />
-        </listeners>
-      </errors>
-    </specialSources>
-  </loggingConfiguration>
   <connectionStrings>
     <add name="ContributionsEntities" connectionString="metadata=res://*/Contributions.csdl|res://*/Contributions.ssdl|res://*/Contributions.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.;Initial Catalog=TheGuide;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
-    <add name="Database" connectionString="Data Source=.;Initial Catalog=smallguide;Persist Security Info=True;User ID=sa;Password=marcusp;Pooling=False" providerName="System.Data.SqlClient" />
+    <add name="Database" connectionString="database=smallguide; server=.; user id=sa; password=marcusp; pooling=false" providerName="System.Data.SqlClient" />
     <add name="IdentityURL" connectionString="https://api.stage.bbc.co.uk/opensso/identityservices/IdentityServices;dna live;10.152.4.15:80;logging" providerName="" />
     <add name="ProfileRead" connectionString="server=ops-dbdev1.national.core.bbc.co.uk; port=3312; user id=profile; password=crudmeister; database=mdb; pooling=true" providerName="MySql.Data.MySqlClient" />
     <add name="ProfileWrite" connectionString="server=ops-dbdev1.national.core.bbc.co.uk; port=3312; user id=profile; password=crudmeister; database=mdb; pooling=true" providerName="MySql.Data.MySqlClient" />
+
+    <!-- updateSP should use sa user as it restores snapshots - THIS SHOULD NOT BE PUBLISHED TO LIVE -->
+    <add name="updateSP" connectionString="database=smallguide; server=.; user id=sa; password=marcusp; pooling=false" providerName="System.Data.SqlClient" />
+    
   </connectionStrings>
   <cachingConfiguration defaultCacheManager="Cache Manager">
     <cacheManagers>
       <add expirationPollFrequencyInSeconds="60" maximumElementsInCacheBeforeScavenging="1000" numberToRemoveWhenScavenging="10" backingStoreName="Null Storage" type="Microsoft.Practices.EnterpriseLibrary.Caching.CacheManager, Microsoft.Practices.EnterpriseLibrary.Caching, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d" name="Cache Manager" />
+      <add ServerList="127.0.0.1:11211" type="BBC.Dna.Utils.MemcachedCacheManager, BBC.Dna.Utils, Version=1.0.0.0, Culture=neutral, PublicKeyToken=c2c5f2d0ba0d9887" name="Memcached" />
     </cacheManagers>
     <backingStores>
       <add encryptionProviderName="" type="Microsoft.Practices.EnterpriseLibrary.Caching.BackingStoreImplementations.NullBackingStore, Microsoft.Practices.EnterpriseLibrary.Caching, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d" name="Null Storage" />
     </backingStores>
   </cachingConfiguration>
   <appSettings>
-    <add key="xslt_directory" value="http://local.bbc.co.uk:8081/comments/xslt/2.0" />
-    <add key="microsoft.visualstudio.teamsystems.backupinfo" value="1;web.config.backup" />
+    <!-- The location of the xslt files - can be UNC -->
+    <add key="xslt_directory" value="http://local.bbc.co.uk:8081/dna/api/comments/xslt/2.0" />
+    <!-- The location of the web service -->
+    <add key="ServerBasePath" value="http://local.bbc.co.uk/dna/api/comments/CommentsService.svc" />
+    <!-- BBCUID key -->
+    <add key="SecretKey" value="simon_brickle" />
+    <!-- Path to log file directory -->
+    <add key="logfilepath" value="d:\temp\InputLogs"/>
+    <!-- Proxy server to use -->
+    <add key="proxyserver" value="http://www-cache.reith.bbc.co.uk:80"/>
+    <!-- If 1 then display .net errors - otherwise friendly error message will be sent -->
+    <add key="aspneterrors" value="1"/>
+    <!-- Maximum number of ASPX concurrent requests -->
+    <add key="maxrequests" value="50"/>
+    <!-- Memcached serverlist for functional tests -->
+    <add key="ServerList" value="127.0.0.1:11211" />
+    <!-- Secondary Memcached serverlist for functional tests -->
+    <add key="SecondaryMemcachedServer" value="10.161.68.132:11211" />
   </appSettings>
   <system.web>
+
     <!--
             Set compilation debug="true" to insert debugging 
             symbols into the compiled page. Because this 
@@ -117,10 +96,15 @@
             <error statusCode="404" redirect="FileNotFound.htm" />
         </customErrors>
         -->
-    <pages>
+    <!--
+            We've disabled this feature so that users can enter
+						GuideML and other potentially dangerous stuff
+        -->
+    <pages validateRequest="false">
       <controls>
         <add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </controls>
+      
     </pages>
     <httpHandlers>
       <remove verb="*" path="*.asmx" />
@@ -159,7 +143,7 @@
   </system.webServer>
   <system.serviceModel>
     <client>
-      <endpoint binding="basicHttpBinding" contract="BBC.Dna.Moderation" name="ModerationServiceEndPoint" />
+      <endpoint binding="basicHttpBinding" contract="BBC.Dna.Api" name="CommentServiceEndPoint" />
     </client>
     <behaviors>
       <endpointBehaviors>
@@ -170,12 +154,17 @@
       <serviceBehaviors>
         <behavior name="RestServiceBehaviour">
           <serviceMetadata httpGetEnabled="True" />
+          <serviceThrottling maxConcurrentCalls="200" maxConcurrentSessions="200" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
     <services>
-      <service name="BBC.Dna.Api.ModerationService">
-        <endpoint address="" binding="webHttpBinding" name="ModerationServiceEndPoint" contract="BBC.Dna.Moderation" />
+      <service name="BBC.Dna.Api.CommentsService">
+        <endpoint address="" binding="webHttpBinding" name="CommentServiceEndPoint" contract="BBC.Dna.Api" />
+        <!-- endpoint address="http://local.bbc.co.uk/comments/CommentsService.svc/basic"
+     binding="wsHttpBinding" name="CommentServiceEndPointBasic"
+     bindingName="ws" contract="BBC.Dna.Api.CommentsService" / -->
+        <!-- endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" / -->
       </service>
     </services>
     <diagnostics>
