--- a/Main/Source/Shared/BBC.Dna.Objects/BBC.Dna.Objects.csproj
+++ b/Main/Source/Shared/BBC.Dna.Objects/BBC.Dna.Objects.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Club.cs" />
     <Compile Include="ArticleInfoReferencesUser.cs" />
     <Compile Include="Error.cs" />
+    <Compile Include="SmileyTranslator.cs" />
     <Compile Include="ThreadPostSummary.cs" />
     <Compile Include="Entities.cs" />
     <Compile Include="ForumHelper.cs" />
@@ -107,6 +108,7 @@
     <Compile Include="ThreadPost.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThreadSummary.cs" />
+    <Compile Include="Translator.cs" />
     <Compile Include="User.cs" />
     <Compile Include="RelatedClubs.cs" />
     <Compile Include="SubscribeState.cs" />
