--- a/Main/Source/Shared/BBC.Dna.Utils.Tests/BBC.Dna.Utils.Tests.csproj
+++ b/Main/Source/Shared/BBC.Dna.Utils.Tests/BBC.Dna.Utils.Tests.csproj
@@ -40,6 +40,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Reference DLLs\NMock\NMock2.dll</HintPath>
     </Reference>
+    <Reference Include="Rhino.Mocks, Version=3.6.0.0, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Reference DLLs\Rhino.Mocks.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -59,6 +63,7 @@
     <Compile Include="StringUtilsTest.cs" />
     <Compile Include="TestDateRangeValidation.cs" />
     <Compile Include="TimeZoneInfoTests.cs" />
+    <Compile Include="TranslatorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\BBC.Dna\BBC.DNA.csproj">
