--- a/Main/Source/Shared/BBC.Dna.Utils/BBC.Dna.Utils.csproj
+++ b/Main/Source/Shared/BBC.Dna.Utils/BBC.Dna.Utils.csproj
@@ -121,6 +121,7 @@
     <Compile Include="IDnaCache.cs" />
     <Compile Include="IDnaDiagnostics.cs" />
     <Compile Include="IRequest.cs" />
+    <Compile Include="LinkTranslator.cs" />
     <Compile Include="Locking.cs">
       <SubType>
       </SubType>
@@ -128,6 +129,7 @@
     <Compile Include="MemcachedCacheManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryStringHelper.cs" />
+    <Compile Include="QuoteTranslator.cs" />
     <Compile Include="RequestIDGenerator.cs" />
     <Compile Include="Statistics.cs" />
     <Compile Include="StringUtils.cs" />
