--- a/Main/Source/Databases/The Guide/dbu_storedprocedures/dbu_storedprocedures.csproj
+++ b/Main/Source/Databases/The Guide/dbu_storedprocedures/dbu_storedprocedures.csproj
@@ -29,7 +29,7 @@
   </PropertyGroup>
   <UsingTask TaskName="UpdateSpTask" AssemblyFile="..\updatesp.exe" />
   <Target Name="Build" Inputs="@(None)" Outputs="$(OutputTarget)">
-    <UpdateSpTask BuildFiles="@(None)" BuildTargetFile="$(OutputTarget)" Config="..\updatesp.config" BuildConfig="$(Configuration)" />
+    <UpdateSpTask BuildFiles="@(None)" BuildTargetFile="$(OutputTarget)" UpdateSpBuildConfigFile="" BuildConfig="$(Configuration)" />
   </Target>
   <Target Name="Clean">
     <Delete Files="$(OutputTarget)" TreatErrorsAsWarnings="true" />
