Added create test site bat file

--- a/Main/Tests/Legacy Tests/Tests/Tests.csproj
+++ b/Main/Tests/Legacy Tests/Tests/Tests.csproj
@@ -201,6 +201,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Createh2g2UnitTestingSite.bat" />
     <None Include="Dna.Moderation\ProfanityData.xsd" />
     <None Include="Dna.Moderation\ProfanityData.xsx">
       <DependentUpon>ProfanityData.xsd</DependentUpon>
