Added missing membershomepagebuilder.h to ripley

--- a/Main/Source/Ripley/ripleycore.vcproj
+++ b/Main/Source/Ripley/ripleycore.vcproj
@@ -1886,6 +1886,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\MembersHomePageBuilder.h"
+				>
+			</File>
+			<File
 				RelativePath=".\MessageBoardAdmin.h"
 				>
 			</File>
