--- a/Main/Source/Ripley/ripleycore.vcproj
+++ b/Main/Source/Ripley/ripleycore.vcproj
@@ -10,6 +10,7 @@
 	SccLocalPath="SAK"
 	SccProvider="SAK"
 	Keyword="MFCProj"
+	AssemblyReferenceSearchPaths="&quot;.\profileapi\include&quot;"
 	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
