Added slightly better comments to updatesp-sample.config, inc. an example on how you can handle a db that has a corresponding snap-shot (like SmallGuide has)

--- a/Main/Source/Databases/The Guide/updatesp-Sample.config
+++ b/Main/Source/Databases/The Guide/updatesp-Sample.config
@@ -12,8 +12,12 @@
 	</connection>
 
 	<!--
-	  The <database> tag specifies the database, and the connection you should use
-		to connect to is
+	  The <database> tag specifies a database target.
+		<name> is the name of the database
+		<connection> states the connection details to use. <connection>
+		tags are specified earlier in the file.
+		
+		You can have as many <database> tags as you want
 	-->
 	<database>
 		<name>theGuide</name>
@@ -21,8 +25,16 @@
 	</database>
 	
 	<!--
-	  If the database section contains <snapshot> and <snapshotfilename>, that
-		db will have the snapshot restored and recreated automatically
+	  If the database section contains <snapshot> and <snapshotfilename> tags,
+		that db will have the snapshot restored and recreated automatically
+	
+		e.g:
+		
+		<database>
+			<name>smallGuide</name>
+			<connection>admin</connection>
+			<snapshot>smallGuideSS</snapshot>
+			<snapshotfilename>J:\MSSQL\smallGuide.ss</snapshotfilename>
+		</database>
 	-->
-
 </updatesp>
