Added the mysql libs to the Ripley project, as another quick and dirty hack to get Ripley to build on any machine

--- a/Main/Source/Ripley/RipleyServer.vcproj
+++ b/Main/Source/Ripley/RipleyServer.vcproj
@@ -192,7 +192,7 @@
 				OutputFile=".\Debug/RipleyServer.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories=".\lib;profileapi\profileapi\Debug;c:\mysql\lib\opt"
+				AdditionalLibraryDirectories=".\lib;profileapi\profileapi\Debug;mysql\lib\opt"
 				IgnoreDefaultLibraryNames=""
 				ModuleDefinitionFile=".\RipleyServer.def"
 				GenerateDebugInformation="true"
