Tweaks to make Ripley link on the build server

--- a/Main/Source/Ripley/RipleyServer.vcproj
+++ b/Main/Source/Ripley/RipleyServer.vcproj
@@ -192,7 +192,7 @@
 				OutputFile=".\Debug/RipleyServer.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories=".\lib;profileapi\profileapi\Debug;mysql\lib\opt"
+				AdditionalLibraryDirectories=".\Debug;profileapi\profileapi\Debug;mysql\lib\opt"
 				IgnoreDefaultLibraryNames=""
 				ModuleDefinitionFile=".\RipleyServer.def"
 				GenerateDebugInformation="true"
