removed the iisreset /stop for the pre-build event

--- a/Main/Source/Ripley/RipleyServer.vcproj
+++ b/Main/Source/Ripley/RipleyServer.vcproj
@@ -133,7 +133,7 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				CommandLine="iisreset /stop"
+				CommandLine=""
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
